--- a/src/BarChart.css
+++ b/src/BarChart.css
@@ -1,18 +1,22 @@
 .chart-container {
+  position: relative;
   width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  height: 500px; /* Adjust the height as needed */
   overflow-x: auto; /* Enable horizontal scrolling if needed */
-  overflow-y: auto; /* Enable vertical scrolling */
-  max-height: 600px; /* Maximum height for the container, adjust as necessary */
-  border: 1px solid #ccc; /* Optional: Add a border for better visibility */
-  padding: 10px; /* Optional: Add some padding */
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Optional: Add a subtle shadow */
-  background-color: #fff; /* Optional: Add a background color */
-  border-radius: 8px; /* Optional: Add rounded corners */
 }
 
 .chart-inner-container {
-  width: 100%;
+  position: relative;
+  height: 100%;
+  min-height: 400px; /* Minimum height for small datasets */
 }
+
+.filter-container {
+  margin-bottom: 10px;
+}
+
 
 
   /* companiwise donation for party
