--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 /*Company Funding css*/
-.App {
+ .App {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,11 +17,11 @@
   
   .App-link {
     color: #61dafb;
-  }
-  
+  } 
+   
 
 
-/* companiwise donation for party
+/* companiwise donation for party*/
 .app-container {
     display: flex;
     flex-direction: column;
@@ -33,10 +33,30 @@
   .chart-wrapper {
     width: 100%;
     max-width: 1200px; /* Adjust this based on your requirements */
-    /* margin-top: 20px;
+    margin-top: 20px;
     border: 1px solid #ddd;
     padding: 20px;
     background: #fff;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   }
-   /* */ 
+   
+   /* App.css  bubble chart and bar chart*/
+.app-container {
+  text-align: center;
+  padding: 20px;
+}
+
+.chart-container {
+  position: relative;
+  margin: auto;
+  height: 100vh;
+  width: 100vw;
+}
+
+.chart-inner-container {
+  position: relative;
+}
+
+select {
+  margin-bottom: 20px;
+}
